--- a/css/style.css
+++ b/css/style.css
@@ -545,3 +545,13 @@ h4 {
 .rating:hover>input:checked~label:before {
     opacity: 0.4;
 }
+
+
+/****************************** FOOTER *********************************/
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -2vw;
+    margin-top: -2vw;
+}
