--- a/css/style.css
+++ b/css/style.css
@@ -548,10 +548,30 @@ h4 {
 
 
 /****************************** FOOTER *********************************/
-.center{
+.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: -2vw;
     margin-top: -2vw;
+}
+
+/****************************** Chi siamo (Footer) *********************************/
+.article-title {
+    font-weight: 400;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    line-height: 1.2;
+    letter-spacing: .02em;
+    color: #F18E00 !important;
+    padding-right: 32vw;
+}
+
+.paddino {
+    padding-left: 20vw;
+}
+
+.imglogo1 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
