--- a/css/styleadmin.css
+++ b/css/styleadmin.css
@@ -26,6 +26,14 @@ i {
     color: white !important;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -2vw;
+    margin-top: -2vw;
+}
+
 
 .car-item {
     height: 500re !important;
