--- a/css/style.css
+++ b/css/style.css
@@ -604,7 +604,8 @@ hr {
     border: 1px solid !important;
 }
 
-/****************************** CARD PAYMENT *************/
+/****************************** GUESS THE FIILM *************/
+.guess{
+    color: #f4f4f4!important;
+}
 
-
-/****************************** CARD PAYMENT ************
